tests/baselines/reference/abstractClassInLocalScopeIsAbstract.errors.txt
abstractClassInLocalScopeIsAbstract.ts(4,5): error TS2511: Cannot create an instance of an abstract class.


==== abstractClassInLocalScopeIsAbstract.ts (1 errors) ====
    (() => {
        abstract class A {}
        class B extends A {}
        new A();
        ~~~~~~~
!!! error TS2511: Cannot create an instance of an abstract class.
        new B();
    })()
    